<resources>
    <string name="app_name">FirebaseBepoChat</string>

    <!-- Fragment Main Page -->
    <string name="login">Login</string>
    <string name="nice_to_see_you_again">Nice to see you again!</string>
    <string name="welcome">Welcome!</string>

    <!-- Fragment Main, Login Page -->
    <string name="you_are_not_a_member">You are not a member?</string>
    <string name="register">Register.</string>

    <!-- Fragment Login Page -->
    <string name="login_page">Login Page</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="sign_in_with_anonymous">Sign in with Anonymous</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>

    <!-- Fragment Login, Register Page -->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>

    <!-- Fragment Register Page -->
    <string name="register_page">Register Page</string>
    <string name="password_check">Password Check</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="nickname">Nickname</string>
    <string name="sign_up">Sign Up</string>

    <!-- Fragment HomeMenu Page -->
    <string name="search">Search</string>
    <string name="person_add">Person Add</string>

    <!-- Fragment DrawerMenu Page -->
    <string name="channels">Channels</string>
    <string name="groups">Groups</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>

    <!-- Fragment BottomNavigationMenu Page -->
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="chat_list">Chat List</string>

</resources>