<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.login.MainFragment">

    <TextView
        android:id="@+id/mainTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanumgothicbold"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="51sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/subTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanumgothiclight"
        android:text="@string/nice_to_see_you_again"
        android:textColor="#4DFFFFFF"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/mainTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/mainTitleTextView" />

    <TextView
        android:id="@+id/memberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nanumgothiclight"
        android:text="@string/you_are_not_a_member"
        android:textColor="@color/gray_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nanumgothicbold"
        android:text="@string/register"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/memberTextView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/nanumgothic"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="50dp"
        app:layout_constraintStart_toStartOf="@id/mainTitleTextView"
        app:layout_constraintTop_toBottomOf="@id/subTitleTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>