<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/red"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/backImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/nanumgothicbold"
        android:text="@string/login_page"
        android:textColor="@color/gray_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/emailLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email_address"
        android:textColorHint="@color/gray"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeColor="@color/gray"
        app:counterMaxLength="64"
        app:hintTextColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:maxLength="64"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="16sp"
            android:theme="@style/ColoredHandleTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeColor="@color/gray"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:hintTextColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/loginEmailButton"
        app:layout_constraintEnd_toEndOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="@id/emailLayout"
        app:layout_constraintTop_toBottomOf="@id/emailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:maxLength="20"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="16sp"
            android:theme="@style/ColoredHandleTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginEmailButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/nanumgothicbold"
        android:text="@string/sign_in_with_email"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@id/loginAnonymousButton"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginAnonymousButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/nanumgothicbold"
        android:text="@string/sign_in_with_anonymous"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@id/loginDivider"
        app:layout_constraintEnd_toEndOf="@id/loginEmailButton"
        app:layout_constraintStart_toStartOf="@id/loginEmailButton"
        app:layout_constraintTop_toBottomOf="@id/loginEmailButton" />


    <LinearLayout
        android:id="@+id/loginDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/loginAnonymousButton"
        app:layout_constraintStart_toStartOf="@id/loginAnonymousButton"
        app:layout_constraintTop_toBottomOf="@id/loginAnonymousButton">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:background="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/or" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:background="@color/gray" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginGoogleButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_signin_google"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/loginDivider"
        app:layout_constraintStart_toStartOf="@id/loginDivider"
        app:layout_constraintTop_toBottomOf="@id/loginDivider" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_signin_facebook"
        android:text="@string/sign_in_with_facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/loginDivider"
        app:layout_constraintStart_toStartOf="@id/loginDivider"
        app:layout_constraintTop_toBottomOf="@id/loginGoogleButton" />


    <TextView
        android:id="@+id/memberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nanumgothiclight"
        android:text="@string/you_are_not_a_member"
        android:textColor="@color/gray_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/registerTextView"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nanumgothicbold"
        android:text="@string/register"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/memberTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/memberTextView"
        app:layout_constraintTop_toTopOf="@id/memberTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>